apps/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4
  namespace: db-tools
spec:
  type: ClusterIP
  selector:
    app: pgadmin4
  ports:
    - name: http
      port: 80
      targetPort: 80
